// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fromJSZip accepts a v5 manifest with a companion 1`] = `
Object {
  "buildId": "0x0123456789abcdef",
  "components": Object {
    "companion": Object {
      "data": Array [
        99,
        111,
        109,
        112,
        97,
        110,
        105,
        111,
        110,
      ],
      "type": "Buffer",
    },
    "device": Object {
      "higgs": Object {
        "artifact": Object {
          "data": Array [
            100,
            101,
            118,
            105,
            99,
            101,
          ],
          "type": "Buffer",
        },
        "platform": undefined,
      },
    },
  },
  "requestedPermissions": undefined,
  "sdkVersion": Object {
    "companionApi": "1.0.0",
    "deviceApi": "1.0.0",
  },
  "sourceMaps": undefined,
  "uuid": "eff9d309-eadd-41d7-9af3-696eafc3fa31",
}
`;

exports[`fromJSZip accepts a v5 manifest with a versioned platform 1`] = `
Object {
  "buildId": "0x0123456789abcdef",
  "components": Object {
    "companion": undefined,
    "device": Object {
      "higgs": Object {
        "artifact": Object {
          "data": Array [
            100,
            101,
            118,
            105,
            99,
            101,
            46,
            122,
            105,
            112,
            32,
            99,
            111,
            110,
            116,
            101,
            110,
            116,
            115,
          ],
          "type": "Buffer",
        },
        "platform": Array [
          "32.1.16+",
        ],
      },
    },
  },
  "requestedPermissions": undefined,
  "sdkVersion": Object {
    "deviceApi": "1.0.0",
  },
  "sourceMaps": undefined,
  "uuid": "eff9d309-eadd-41d7-9af3-696eafc3fa31",
}
`;

exports[`fromJSZip accepts a v5 manifest with an unversioned platform 1`] = `
Object {
  "buildId": "0x0123456789abcdef",
  "components": Object {
    "companion": undefined,
    "device": Object {
      "higgs": Object {
        "artifact": Object {
          "data": Array [
            100,
            101,
            118,
            105,
            99,
            101,
            46,
            122,
            105,
            112,
            32,
            99,
            111,
            110,
            116,
            101,
            110,
            116,
            115,
          ],
          "type": "Buffer",
        },
        "platform": undefined,
      },
    },
  },
  "requestedPermissions": undefined,
  "sdkVersion": Object {
    "deviceApi": "1.0.0",
  },
  "sourceMaps": undefined,
  "uuid": "eff9d309-eadd-41d7-9af3-696eafc3fa31",
}
`;

exports[`fromJSZip accepts a v5 manifest with multiple platforms 1`] = `
Object {
  "buildId": "0x0123456789abcdef",
  "components": Object {
    "companion": undefined,
    "device": Object {
      "higgs": Object {
        "artifact": Object {
          "data": Array [
            100,
            101,
            118,
            105,
            99,
            101,
            46,
            122,
            105,
            112,
            32,
            99,
            111,
            110,
            116,
            101,
            110,
            116,
            115,
          ],
          "type": "Buffer",
        },
        "platform": Array [
          "32.1.16+",
        ],
      },
      "meson": Object {
        "artifact": Object {
          "data": Array [
            100,
            101,
            118,
            105,
            99,
            101,
            46,
            122,
            105,
            112,
            32,
            99,
            111,
            110,
            116,
            101,
            110,
            116,
            115,
          ],
          "type": "Buffer",
        },
        "platform": Array [
          "1.2.3+",
        ],
      },
    },
  },
  "requestedPermissions": undefined,
  "sdkVersion": Object {
    "deviceApi": "1.0.0",
  },
  "sourceMaps": undefined,
  "uuid": "eff9d309-eadd-41d7-9af3-696eafc3fa31",
}
`;

exports[`fromJSZip accepts a v6 manifest with a companion 1`] = `
Object {
  "buildId": "0x0123456789abcdef",
  "components": Object {
    "companion": Object {
      "data": Array [
        99,
        111,
        109,
        112,
        97,
        110,
        105,
        111,
        110,
      ],
      "type": "Buffer",
    },
    "device": Object {
      "higgs": Object {
        "artifact": Object {
          "data": Array [
            104,
            105,
            103,
            103,
            115,
          ],
          "type": "Buffer",
        },
        "platform": undefined,
      },
    },
  },
  "requestedPermissions": undefined,
  "sdkVersion": Object {
    "companionApi": "1.0.0",
    "deviceApi": "1.0.0",
  },
  "sourceMaps": undefined,
  "uuid": "eff9d309-eadd-41d7-9af3-696eafc3fa31",
}
`;

exports[`fromJSZip accepts a v6 manifest with multiple device components 1`] = `
Object {
  "buildId": "0x0123456789abcdef",
  "components": Object {
    "companion": undefined,
    "device": Object {
      "higgs": Object {
        "artifact": Object {
          "data": Array [
            104,
            105,
            103,
            103,
            115,
          ],
          "type": "Buffer",
        },
        "platform": Array [
          "23.1.5",
          "32.4.16+",
        ],
      },
      "meson": Object {
        "artifact": Object {
          "data": Array [
            109,
            101,
            115,
            111,
            110,
          ],
          "type": "Buffer",
        },
        "platform": Array [
          "32.4.17+",
        ],
      },
    },
  },
  "requestedPermissions": undefined,
  "sdkVersion": Object {
    "deviceApi": "1.0.0",
  },
  "sourceMaps": undefined,
  "uuid": "eff9d309-eadd-41d7-9af3-696eafc3fa31",
}
`;

exports[`fromJSZip accepts a v6 manifest with no device component 1`] = `
Object {
  "buildId": "0x0123456789abcdef",
  "components": Object {
    "companion": Object {
      "data": Array [],
      "type": "Buffer",
    },
    "device": Object {},
  },
  "requestedPermissions": undefined,
  "sdkVersion": Object {
    "companionApi": "1.0.0",
    "deviceApi": "1.0.0",
  },
  "sourceMaps": undefined,
  "uuid": "eff9d309-eadd-41d7-9af3-696eafc3fa31",
}
`;

exports[`fromJSZip accepts a v6 manifest with no platform spec for the device 1`] = `
Object {
  "buildId": "0x0123456789abcdef",
  "components": Object {
    "companion": undefined,
    "device": Object {
      "higgs": Object {
        "artifact": Object {
          "data": Array [
            104,
            105,
            103,
            103,
            115,
            46,
            122,
            105,
            112,
            32,
            99,
            111,
            110,
            116,
            101,
            110,
            116,
            115,
          ],
          "type": "Buffer",
        },
        "platform": undefined,
      },
    },
  },
  "requestedPermissions": undefined,
  "sdkVersion": Object {
    "deviceApi": "1.0.0",
  },
  "sourceMaps": undefined,
  "uuid": "eff9d309-eadd-41d7-9af3-696eafc3fa31",
}
`;

exports[`fromJSZip accepts a v6 manifest with sourcemaps but no device component 1`] = `
Object {
  "buildId": "0x0123456789abcdef",
  "components": Object {
    "companion": Object {
      "data": Array [],
      "type": "Buffer",
    },
    "device": Object {},
  },
  "requestedPermissions": undefined,
  "sdkVersion": Object {
    "companionApi": "1.0.0",
    "deviceApi": "1.0.0",
  },
  "sourceMaps": Object {
    "companion": Object {},
    "device": undefined,
    "settings": undefined,
  },
  "uuid": "eff9d309-eadd-41d7-9af3-696eafc3fa31",
}
`;

exports[`fromJSZip rejects a manifest that is not JSON 1`] = `[SyntaxError: Unexpected token N in JSON at position 0]`;

exports[`fromJSZip rejects a manifest with unsupported version 1`] = `[Error: Unsupported manifest version 100]`;

exports[`fromJSZip rejects a v5 manifest which references a nonexistent companion component file 1`] = `[Error: companion.zip not present in zip file]`;

exports[`fromJSZip rejects a v5 manifest which references a nonexistent device component file 1`] = `[Error: doesnotexist.zip not present in zip file]`;

exports[`fromJSZip rejects a v5 manifest with mistyped components 1`] = `[Error: No components listed in manifest.json]`;

exports[`fromJSZip rejects a v5 manifest with no device component 1`] = `[Error: No components listed in manifest.json]`;

exports[`fromJSZip rejects a v5 manifest with no platform descriptor 1`] = `[Error: Missing platform descriptors]`;

exports[`fromJSZip rejects a v6 manifest which references a nonexistent companion component file 1`] = `[Error: companion.zip not present in zip file]`;

exports[`fromJSZip rejects a v6 manifest which references a nonexistent device component file 1`] = `[Error: doesnotexist.zip not present in zip file]`;

exports[`fromJSZip rejects a v6 manifest with mistyped components 1`] = `[Error: No components listed in manifest.json]`;

exports[`fromJSZip rejects a zip file without a manifest 1`] = `[Error: manifest.json not present in zip file]`;
